--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" href="./media/programming.png">
     <title>Document</title>
 </head>
 
@@ -19,7 +20,7 @@
             <div class="wrapper">
                 <!-- Logo -->
                 <div id="logo">
-                    <p>Logo</p>
+                    <img src="./media/programming.png" alt="logo">
                 </div>
 
                 <!-- Menu -->
@@ -37,7 +38,7 @@
         <!-- Hero content -->
         <div class="hero-content content-wrapper">
             <h1>YOUR FAVORITE SOURCE OF FREE BOOTSTRAP THEMES</h1>
-            <div class="divider"></div>
+            <div class="divider brown"></div>
             <p>Start Bootstrap can help you build better
                 websites using the Bootstrap framework! Just download a theme and
                 start customizing, no strings attached!
@@ -50,7 +51,7 @@
     <section class="starter">
         <div class="starter-content content-wrapper">
             <h2>We've got what you need!</h2>
-            <div class="divider-white"></div>
+            <div class="divider white"></div>
             <p>Start Bootstrap has everything you need to get your new website
                 up and running in no time! Choose one of our open source, free to
                 download, and easy to use themes! No strings attached!
