--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" href="./media/programming.png">
+    <script src="https://kit.fontawesome.com/8ff1b3b5ce.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 
@@ -58,6 +59,84 @@
             </p>
             <button><a url="#">GET STARTED!</a></button>
         </div>
+    </section>
+
+    <!-- Services -->
+    <section class="services">
+        <div class="services-content wrapper">
+            <h2>At Your Service</h2>
+            <div class="divider brown"></div>
+            <div class="service-list">
+                <div class="service">
+                    <i class="icon fas fa-gem"></i>
+                    <h3>Sturdy Themes</h3>
+                    <p>Our themes are updated regularly to keep them bug free!</p>
+                </div>
+                <div class="service">
+                    <i class="icon fas fa-laptop-code"></i>
+                    <h3>Up to Date</h3>
+                    <p>All dependencies are kept current to keep things fresh.</p>
+                </div>
+                <div class="service">
+                    <i class="icon fas fa-globe"></i>
+                    <h3>Ready to Publish</h3>
+                    <p>You can use this design as is, or you can make changes!</p>
+                </div>
+                <div class="service">
+                    <i class="icon fas fa-heart"></i>
+                    <h3>Made with Love</h3>
+                    <p>Is it really open source if it's not made with love?</p>
+                </div>
+            </div>
+        </div>    
+    </section>
+
+    <!-- Projects -->
+    <section class="projects">
+        <div class="project-list">
+            <div class="project box-1">
+                <div class="project-name">
+                    <h5>CATEGORY</h5>
+                    <p>Project Name</p>
+                </div>
+            </div>
+            <div class="project box-2">
+                <div class="project-name">
+                    <h5>CATEGORY</h5>
+                    <p>Project Name</p>
+                </div>
+            </div>
+            <div class="project box-3">
+                <div class="project-name">
+                    <h5>CATEGORY</h5>
+                    <p>Project Name</p>
+                </div>
+            </div>
+            <div class="project box-4">
+                <div class="project-name">
+                    <h5>CATEGORY</h5>
+                    <p>Project Name</p>
+                </div>
+            </div>
+            <div class="project box-5">
+                <div class="project-name">
+                    <h5>CATEGORY</h5>
+                    <p>Project Name</p>
+                </div>
+            </div>
+            <div class="project box-6">
+                <div class="project-name">
+                    <h5>CATEGORY</h5>
+                    <p>Project Name</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Download -->
+    <section class="download">
+        <h2>Free Download at Start Bootstrap!</h2>
+        <button><a href="#">DOWNLOAD NOW</a></button>
     </section>
 
 
