--- a/index.html
+++ b/index.html
@@ -139,6 +139,41 @@
         <button><a href="#">DOWNLOAD NOW</a></button>
     </section>
 
+    <!-- Contact -->
+    <section class="contacts content-wrapper">
+        <h2>Let's Get In Touch!</h2>
+        <div class="divider brown"></div>
+        <p class="text">Ready to start your next project with us? 
+            Give us a call or send us an email and we will 
+            get back to you as soon as possible!</p>
+        <div class="contact-info">
+            <div class="contact">
+                <i class="fas fa-phone"></i>
+                <p>+1 (555) 123-4567</p>
+            </div>
+            <div class="contact">
+                <i class="fas fa-envelope"></i>
+                <a href="#">contact@yourwebsite.com</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Subscribe -->
+    <section class="subscribe">
+        <div class="content-wrapper">
+            <h2>Subscribe</h2>
+            <form action="#">
+                <input class="mail" type="email" placeholder="contact@yourmail.com">
+                <button>Subscribe</button>
+            </form>
+        </div>
+    </section>
+
+    <!-- Footnote -->
+    <section class="footnote">
+        <p>Copyright © 2020 - Strahinja Nikic</p>
+    </section>
+
 
     <!-- JavaScript -->
     <script src="./js/main.js"></script>
