--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" href="./media/programming.png">
     <script src="https://kit.fontawesome.com/8ff1b3b5ce.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Portfolio</title>
 </head>
 
 <body>
